<resources>
    <string name="app_name">2019_Scouting_App</string>
    <string name="home_welcome_string">Ubotics 2019 Scouting</string>
    <string name="create_pit_data">Create Pit Data</string>
    <string name="create_match_data">Create Match Data</string>
    <string name="clear">!Clear All Data!</string>
    <string name="add_data">Add Data</string>
    <string name="pit_data_home">Pit Data Creator</string>
    <string name="match_data_home">Match Data Creator</string>
    <string name="team_number">Team Number</string>
    <string name="match_number">Match Number</string>
    <string name="set_match_num">Set Match</string>
    <string name="hatch_ball_both">Scoring</string>
    <string name="auto_camera_both">Sandstorm</string>
    <string name="climb">Climb</string>
    <string name="rocket_reach">Rocket</string>
    <string name="drive_type">DriveTrain</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="best_red_team">Best Red Team</string>
    <string name="best_blue_team">Best Blue Team</string>
    <string name="winning_team">Winning Team</string>
    <string name="issues">Issues:</string>
    <string name="hatches">Hatches:</string>
    <string name="cargo">Cargo:</string>
    <string name="hab_climb">Hab Climb:</string>
    <string name="rocket">Rocket:</string>
    <string name="defense">Defense:</string>
    <string name="penalties">Penalties:</string>
    <string name="enter_number">Enter Number Scored</string>
    <string name="enter_amount">Enter Amount</string>
    <string-array name="team_numbers">
        <item></item>
        <item>31</item>
        <item>662</item>
        <item>932</item>
        <item>1209</item>
        <item>1410</item>
        <item>1561</item>
        <item>1619</item>
        <item>1750</item>
        <item>2165</item>
        <item>2333</item>
        <item>2341</item>
        <item>2352</item>
        <item>2354</item>
        <item>2359</item>
        <item>2373</item>
        <item>2395</item>
        <item>2398</item>
        <item>2410</item>
        <item>2424</item>
        <item>2461</item>
        <item>2723</item>
        <item>2765</item>
        <item>2773</item>
        <item>2795</item>
        <item>2986</item>
        <item>2996</item>
        <item>3152</item>
        <item>3160</item>
        <item>3163</item>
        <item>3179</item>
        <item>3247</item>
        <item>3457</item>
        <item>3465</item>
        <item>3507</item>
        <item>3593</item>
        <item>3612</item>
        <item>3931</item>
        <item>4005</item>
        <item>4293</item>
        <item>4418</item>
        <item>4499</item>
        <item>4500</item>
        <item>4522</item>
        <item>4523</item>
        <item>4550</item>
        <item>4959</item>
        <item>5098</item>
        <item>5550</item>
        <item>5578</item>
        <item>5621</item>
        <item>5730</item>
        <item>5889</item>
        <item>5930</item>
        <item>6026</item>
        <item>6464</item>
        <item>6730</item>
        <item>6800</item>
        <item>6809</item>
        <item>6891</item>
        <item>6900</item>
        <item>7464</item>
        <item>7473</item>
        <item>7744</item>
    </string-array>
    <string-array name="match_num">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
    </string-array>
    <string-array name="ball_hatch_both">
        <item></item>
        <item>Neither</item>
        <item>Ball</item>
        <item>Hatch</item>
        <item>Both</item>
    </string-array>
    <string-array name="auto_camera_both">
        <item></item>
        <item>None</item>
        <item>Autonomous</item>
        <item>Camera</item>
        <item>Both</item>
    </string-array>
    <string-array name="climb">
        <item></item>
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>
    <string-array name="rocket_reach">
        <item></item>
        <item>None</item>
        <item>Bottom</item>
        <item>Middle</item>
        <item>Top</item>
    </string-array>
    <string-array name="drive_train">
        <item></item>
        <item>Other</item>
        <item>4 Wheel WC</item>
        <item>6 Wheel WC</item>
        <item>8 Wheel WC</item>
        <item>Mecanum Drive</item>
        <item>Tank Tread</item>
    </string-array>
    <string-array name="winners">
        <item></item>
        <item>Tie</item>
        <item>Red Alliance</item>
        <item>Blue Alliance</item>
    </string-array>
    <string-array name="issues">
        <item></item>
        <item>None</item>
        <item>Broke Down</item>
        <item>Disabled</item>
        <item>Tipped Over</item>
        <item>Glitching</item>
        <item>Slow</item>
        <item>Doesn\'t Function Well</item>
        <item>Other</item>
    </string-array>
    <string-array name="hab_climb">
        <item></item>
        <item>None</item>
        <item>Level One</item>
        <item>Level Two</item>
        <item>Level Three</item>
    </string-array>
    <string-array name="rocket">
        <item></item>
        <item>None</item>
        <item>Bottom</item>
        <item>Middle</item>
        <item>Top</item>
    </string-array>
    <string-array name="defense">
        <item></item>
        <item>None</item>
        <item>A Little</item>
        <item>Average</item>
        <item>A Lot</item>
    </string-array>
</resources>
